# AppLogger

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Include/: ConsoleOutput.h  FileOutput.h  Logger.h  OutputDevice.h  SeverityLevel.h  TaskManager.h  TimeStamp.h
src/: ConsoleOutput.cpp  FileOutput.cpp  TaskManager.cpp  main.cpp
tests/: test_logger.cpp  test_task_manager.cpp
